--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Akhilesh",
+  "author": "Akhilesh Goud",
   "license": "ISC",
   "dependencies": {
     "express": "*",
